--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -25,13 +25,14 @@
         <ChildContent>
             <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
-            <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
-            <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
-            <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
             <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
             <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
             <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
+            <MduiNavMenuItem Href="forms">窗体验证</MduiNavMenuItem>
             <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
+            <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
             <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
             <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
             <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
@@ -42,7 +43,6 @@
             <MduiNavMenuItem Href="snackbars">Snackbar</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">对话框</MduiNavMenuItem>
             <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
-            <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">分页</MduiNavMenuItem>
         </ChildContent>
@@ -52,7 +52,7 @@
             <MduiIcon Icon="local_mall" Color="@Colors.Purple.Primary" />
         </IconContent>
         <ChildContent>
-            <MduiNavMenuItem Href="material_icon">Material图标库</MduiNavMenuItem>
+            <MduiNavMenuItem Href="material_icon">Material 图标库</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
 </MduiNavMenu>
