#2 已发布1.0.0的alpha版本，可以从nuget找到

--- a/MduiBlazor.Shared/Components/ExampleSection.razor
+++ b/MduiBlazor.Shared/Components/ExampleSection.razor
@@ -13,6 +13,6 @@
     }
     @if (_showCode || FixCode)
     {
-        <CodeSnippet Class="example-code">@CodeContents</CodeSnippet>
+        <CodeSnippet Language="@Language" Class="example-code">@CodeContents</CodeSnippet>
     }
 </div>
