--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="_content/MduiBlazor.Shared/MduiBlazor.Shared.bundle.scp.css" />
 
     <!-- highlight -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.css">
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/highlight/css/vs.min.css">
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/highlight/css/highlightjs-copy.min.css">
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
@@ -43,11 +43,11 @@
 
     <!-- highlight -->
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/highlight.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/highlight.min.js"></script>
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@@2.1.1/dist/cshtml-razor.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/cshtml-razor.min.js"></script>
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/highlightjs-copy.min.js"></script>
     <script>
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
