--- a/MduiBlazor.Shared/Components/ExampleSection.razor.css
+++ b/MduiBlazor.Shared/Components/ExampleSection.razor.css
@@ -57,9 +57,12 @@
 ::deep .example-code {
     border: 1px solid rgba(0,0,0,.12);
     border-radius: 0 0 3px 3px;
-    border-top: none !important;
     display: block;
     margin: 0;
+}
+
+.example-show ::deep .example-code{
+    border-top: none;
 }
 
 .mdui-theme-layout-dark .example-showcode .example-demo-label {
