--- a/MduiBlazor.Shared/Pages/FabsPage.razor
+++ b/MduiBlazor.Shared/Pages/FabsPage.razor
@@ -40,7 +40,7 @@
     <h2 id="fabmenu">
         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">弹出菜单</MduiText>
     </h2>
-    <ExampleSection Label="Code" Component="@typeof(FabMenu)" />
+    <ExampleSection Component="@typeof(FabMenu)" />
  </div>
 
  <MduiDivider Class="mdui-m-y-5" />
