--- a/MduiBlazor.Shared/Pages/GridPage.razor
+++ b/MduiBlazor.Shared/Pages/GridPage.razor
@@ -29,9 +29,9 @@
     </h2>
 
     <p class="mdui-typo"><code>MduiContainer</code>组件默认占据 92% - 96% 的屏幕宽度，且最大宽度 1280px。</p>
-    <ExampleSection Label="code" HideExample FixCode Component="@typeof(Container)" />
+    <ExampleSection HideExample Component="@typeof(Container)" />
      <p class="mdui-typo">当<code>Fluid</code>参数设置为<code>true</code>时，组件始终占据 100% 的屏幕宽度。</p>
-     <ExampleSection Label="code" HideExample FixCode Component="@typeof(FluidContainer)" />
+     <ExampleSection HideExample Component="@typeof(FluidContainer)" />
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
