--- a/MduiBlazor.Shared/Pages/Index.razor
+++ b/MduiBlazor.Shared/Pages/Index.razor
@@ -39,7 +39,7 @@
             <li>
                 <MduiText Typo="@Typo.subheading">通过 nuget 引入 MduiBlazor 包</MduiText>
             </li>
-            <ExampleSection Label="code" Language="CSharp" FixCode HideExample Component="@typeof(InstallPackage)" />
+            <ExampleSection Language="CSharp" HideExample Component="@typeof(InstallPackage)" />
         </ul>
     </p>
 </div>
@@ -56,23 +56,23 @@
             <li>
                 <MduiText Typo="@Typo.subheading">在 Program 中添加服务</MduiText>
             </li>
-            <ExampleSection Label="code" Language="CSharp" FixCode HideExample Component="@typeof(ServiceInProgram)" />
+            <ExampleSection Language="CSharp" HideExample Component="@typeof(ServiceInProgram)" />
             <li>
                 <MduiText Typo="@Typo.subheading">_Host.cshtml 或者 index.html 中引入样式和脚本</MduiText>
             </li>
-            <ExampleSection Label="code" FixCode HideExample Component="@typeof(CssInHtml)" />
+            <ExampleSection HideExample Component="@typeof(CssInHtml)" />
             <li>
                 <MduiText Typo="@Typo.subheading">在 _Imports.razor 中导入名称空间</MduiText>
             </li>
-            <ExampleSection Label="code" FixCode HideExample Component="@typeof(ImportNamespace)" />
+            <ExampleSection HideExample Component="@typeof(ImportNamespace)" />
             <li class="mdui-typo">
                 <MduiText Typo="@Typo.subheading">把<code>MduiDialogProvider</code>和<code>MduiSnackbarProvider</code>组件加入到<code>MainLayout.razor</code>中</MduiText>
             </li>
-            <ExampleSection Label="code" FixCode HideExample Component="@typeof(ProviderInMainLayout)" />
+            <ExampleSection HideExample Component="@typeof(ProviderInMainLayout)" />
             <li>
                 <MduiText Typo="@Typo.subheading">页面中使用组件</MduiText>
             </li>
-            <ExampleSection Label="code" FixCode HideExample Component="@typeof(Usage)" />
+            <ExampleSection HideExample Component="@typeof(Usage)" />
         </ol>
     </p>
 </div>
