--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -26,23 +26,23 @@
 
     <MduiText Typo="@Typo.subheading"><b>布局组件</b></MduiText>
     <p class="mdui-typo"><code>MduiLayout</code>组件应作为所有组件的父组件，以应用主题元素。</p>
-    <ExampleSection Label="code" HideExample FixCode Component="@typeof(SimpleLayout)" />
+    <ExampleSection HideExample Component="@typeof(SimpleLayout)" />
 
      <MduiText id="appbar" UseMduiTypo Typo="@Typo.subheading"><b>应用栏</b></MduiText>
      <p>带有工具栏的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithToolbar="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithToolbar)" />
+     <ExampleSection Component="@typeof(LayoutWithToolbar)" />
 
      <p>带有 Tab 选项卡的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithTab="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithTab)" />
+     <ExampleSection Component="@typeof(LayoutWithTab)" />
      <p>Tab 选项卡同时含有标题和图标的应用栏。</p>
      <p class="mdui-typo">需要设置组件<code>MduiLayout</code>参数<code>AppbarWithTabLarger="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithTabLarger)" />
+     <ExampleSection Component="@typeof(LayoutWithTabLarger)" />
 
      <p>同时有工具栏和 Tab 选项卡的应用栏。</p>
      <p class="mdui-typo">需要同时设置组件<code>MduiLayout</code>参数<code>AppbarWithToolbar="true"</code>和<code>AppbarWithTab="true"</code>，以留出相应的应用栏高度。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithToolbarAndTab)" />
+     <ExampleSection Component="@typeof(LayoutWithToolbarAndTab)" />
 
      <p>透明背景应用栏。</p>
      <p class="mdui-typo">设置参数<code>Shadow="0"</code>取消应用栏的阴影。</p>
@@ -50,27 +50,27 @@
 
      <MduiText id="drawer" UseMduiTypo Typo="@Typo.subheading"><b>抽屉式导航</b></MduiText>
      <p>左侧抽屉式导航。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithDrawer)" />
+     <ExampleSection Component="@typeof(LayoutWithDrawer)" />
 
      <p>右侧抽屉式导航。</p>
      <p class="mdui-typo">设置组件<code>MduiDrawer</code>参数<code>RightSide="true"</code>。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithRightDrawer)" />
+     <ExampleSection Component="@typeof(LayoutWithRightDrawer)" />
 
      <p>Persistent抽屉式导航。</p>
      <p class="mdui-typo">设置组件<code>MduiDrawer</code>参数<code>Persistent="true"</code>。</p>
-     <ExampleSection Label="code" Component="@typeof(LayoutWithPersistentDrawer)" />
+     <ExampleSection Component="@typeof(LayoutWithPersistentDrawer)" />
 
      <MduiText id="fullLayout" UseMduiTypo Typo="@Typo.subheading"><b>完整布局示例</b></MduiText>
      <p>这是一个完整的布局示例。</p>
-     <ExampleSection Label="code" Component="@typeof(FullLayout)" />
+     <ExampleSection Component="@typeof(FullLayout)" />
 
      <p>另一个完整的布局示例。</p>
      <p class="mdui-typo">需要设置组件<code>MduiDrawer</code>参数<code>Inset="true"</code>，以留出应用栏高度。</p>
-     <ExampleSection Label="code" Component="@typeof(FullLayout2)" />
+     <ExampleSection Component="@typeof(FullLayout2)" />
 
      <p>左右结构的布局示例。</p>
      <p class="mdui-typo">需要设置组件<code>MduiAppbar</code>参数<code>Inset="true"</code>，以留出抽屉导航栏宽度。</p>
-     <ExampleSection Label="code" Component="@typeof(FullLayout3)" />
+     <ExampleSection Component="@typeof(FullLayout3)" />
 
      <p class="mdui-typo">
          另外可以通过设置<code>MduiAppbar</code>和<code>MduiDrawer</code>组件参数<code>Fixed="true"</code>使应用栏和抽屉式导航栏分别固定在浏览器的顶部和侧边。
@@ -87,12 +87,12 @@
      <MduiText Typo="@Typo.subheading"><b>主题色</b></MduiText>
      <p class="mdui-typo">
          通过对<code>MduiLayout</code>组件参数<code>PrimaryColor</code>设置主色、<code>AccentColor</code>设置强调色，对组件下的所有子组件应用主题色。</p>
-     <ExampleSection Label="code" HideExample FixCode Component="@typeof(ThemeColorLayout)" />
+     <ExampleSection HideExample Component="@typeof(ThemeColorLayout)" />
 
      <MduiText Typo="@Typo.subheading"><b>暗黑主题</b></MduiText>
      <p class="mdui-typo">通过对<code>MduiLayout</code>组件参数<code>IsDarkTheme</code>设置为<code>true</code>，对组件下的所有子组件应用暗黑主题。
      </p>
-     <ExampleSection Label="code" HideExample FixCode Component="@typeof(DarkThemeLayout)" />
+     <ExampleSection HideExample Component="@typeof(DarkThemeLayout)" />
  </div>
 
  <MduiDivider Class="mdui-m-y-5" />
