--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -256,7 +256,7 @@
                      <td>
                          <code>string?</code>
                      </td>
-                     <td><code>input</code>标签的输入格式。</td>
+                     <td><code>input</code>标签的输入校验。</td>
                  </tr>
                  <tr>
                      <td>
