--- a/MduiBlazor.Shared/Pages/SnackbarPage.razor
+++ b/MduiBlazor.Shared/Pages/SnackbarPage.razor
@@ -31,7 +31,7 @@
     <MduiText Typo="@Typo.subheading"><b>1. 全局依赖</b></MduiText>
     <p class="mdui-typo">
         在<code>MainLayout</code>布局中加入<code>MduiSnackbarProvider</code>组件。为应用主题，建议将组件放置于<code>MduiLayout</code>中。</p>
-    <ExampleSection FixCode HideExample Label="Code" Component="@typeof(SnackbarLayoutDependant)" />
+    <ExampleSection HideExample Component="@typeof(SnackbarLayoutDependant)" />
 
     <MduiText Typo="@Typo.subheading"><b>2. 注入服务</b></MduiText>
     <CodeSnippet>@@inject SnackbarService SnackbarService</CodeSnippet>
@@ -59,8 +59,8 @@
     <ExampleSection Component="@typeof(PositionsSnackbar)" />
 
     <MduiText id="custom" Typo="@Typo.subheading"><b>自定义 Snackbar 内容</b></MduiText>
-    <ExampleSection FixCode Component="@typeof(CustomSnackbar)" />
-    <ExampleSection FixCode HideExample Label="SnackbarContent" Component="@typeof(SnackbarContent)" />
+    <ExampleSection Component="@typeof(CustomSnackbar)" />
+    <ExampleSection HideExample Component="@typeof(SnackbarContent)" />
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
