--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -29,6 +29,7 @@
             <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
             <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
             <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
+            <MduiNavMenuItem Href="datetime">日期时间控件</MduiNavMenuItem>
             <MduiNavMenuItem Href="forms">窗体验证</MduiNavMenuItem>
             <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
             <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
