--- a/mdui/src/components/button/index.less
+++ b/mdui/src/components/button/index.less
@@ -203,6 +203,10 @@ input.mdui-btn[type="submit"] {
     border-radius: 0;
     opacity: 0.8;
 
+    &:disabled{
+      background-color: rgba(0, 0, 0, 0) !important;
+    }
+
     &::before {
       position: absolute;
       top: 0;
