--- a/MduiBlazor.Shared/Pages/ClassesPage.razor
+++ b/MduiBlazor.Shared/Pages/ClassesPage.razor
@@ -105,9 +105,9 @@
 
     <MduiText UseMduiTypo>
         <ul>
-            <li><code>.mdui-text-lowercase</code>把文本转为小写。</li>
-            <li><code>.mdui-text-uppercase</code>把文本转为大写。</li>
-            <li><code>.mdui-text-capitalize</code>把文本转为单词的首字母大写。</li>
+            <li><code>.mdui-text-left</code>使文本左对齐。</li>
+            <li><code>.mdui-text-center</code>使文本居中对齐。</li>
+            <li><code>.mdui-text-right</code>使文本右对齐。</li>
         </ul>
     </MduiText>
     <ExampleSection Component="@typeof(TextAlignClass)" />
