--- a/MduiBlazor.Shared/Pages/Index.razor
+++ b/MduiBlazor.Shared/Pages/Index.razor
@@ -4,7 +4,7 @@
 <PageTitle>简介 - 安装 - 使用</PageTitle>
 
 <div class="mdui-m-y-5 mdui-typo">
-    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">项目介绍（仅供学习）</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">项目介绍</MduiText>
     <p>Blazor 是一个使用 .NET 生成交互式客户端 Web UI 的框架：</p>
     <p>
         <ul>
