--- a/mdui/src/components/select/index.less
+++ b/mdui/src/components/select/index.less
@@ -272,13 +272,13 @@ select.mdui-select[multiple] {
 
       //原生select
       select.mdui-select:focus {
-        border-bottom-color: @@colorA700;
-        box-shadow: 0 1px 0 0 @@colorA700;
+        border-bottom-color: @@colorA700 !important;
+        box-shadow: 0 1px 0 0 @@colorA700 !important;
       }
 
       select.mdui-select[multiple]:focus {
-        border-color: @@colorA700;
-        box-shadow: 0 0 0 1px @@colorA700;
+        border-color: @@colorA700 !important;
+        box-shadow: 0 0 0 1px @@colorA700 !important;
       }
 
       .mdui-select-menu-item {
