--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -26,7 +26,7 @@
          </MduiToolbar>
      </MduiAppbar>
 
-     <MduiDrawer UseMduiTypo @bind-Opened="@_open" Fixed Inset="@Persistent" Persistent="@Persistent">
+     <MduiDrawer Class="mdui-shadow-1" UseMduiTypo @bind-Opened="@_open" Fixed Inset="@Persistent" Persistent="@Persistent">
          <NavMenu />
      </MduiDrawer>
 
