--- a/mdui/src/components/snackbar/index.less
+++ b/mdui/src/components/snackbar/index.less
@@ -9,20 +9,7 @@
 .mdui-snackbar {
   position: fixed;
   z-index: @z-index-snackbar;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-
-  // 手机端的样式
   width: 100%;
-  min-height: 48px;
-  padding: 0 24px 0 24px;
-  color: #fff;
-  font-size: 14px;
-  line-height: 20px;
-  background-color: #323232;
-  will-change: transform;
 
   // 平板、桌面端样式
   @media (min-width: @screen-sm-min) {
@@ -30,6 +17,23 @@
     min-width: 288px;
     max-width: 568px;
     border-radius: 2px;
+  }
+
+  .mdui-snackbar-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+
+    // 手机端的样式
+    width: 100%;
+    min-height: 48px;
+    padding: 0 24px 0 24px;
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    background-color: #323232;
+    will-change: transform;
   }
 }
 
@@ -117,29 +121,6 @@
 .mdui-snackbar-action {
   margin-right: -16px;
   white-space: nowrap;
-  .mdui-text-color(@color-accent-default-name, a100);
-}
-
-
-/**
- * =============================================================================
- * ************   Snackbar 强调色   ************
- * =============================================================================
- */
-& {
-  .loop-accent-theme(@counter-color) when (@counter-color > 0) {
-    .loop-accent-theme((@counter-color - 1));
-    @colorName: extract(@globalAccentColors, @counter-color);
-
-    .mdui-theme-accent-@{colorName} when not (@colorName =null) {
-      .mdui-snackbar-action {
-        .mdui-text-color(@colorName, a100);
-      }
-    }
-
-  }
-
-  .loop-accent-theme(length(@globalAccentColors));
 }
 
 
@@ -149,7 +130,7 @@
  * =============================================================================
  */
 .layout-theme({
-  .mdui-snackbar {
+  .mdui-snackbar-content {
     background-color: #5d5d5d;
   }
 });
