--- a/MduiBlazor.Shared/Pages/Index.razor
+++ b/MduiBlazor.Shared/Pages/Index.razor
@@ -5,26 +5,14 @@
 
 <div class="mdui-m-y-5 mdui-typo">
     <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">项目介绍</MduiText>
-    <p>Blazor 是一个使用 .NET 生成交互式客户端 Web UI 的框架：</p>
-    <p>
-        <ul>
-            <li>使用 C# 代替 JavaScript 来创建丰富的交互式 UI。</li>
-            <li>共享使用 .NET 编写的服务器端和客户端应用逻辑。</li>
-            <li>将 UI 呈现为 HTML 和 CSS，以支持众多浏览器，其中包括移动浏览器。</li>
-        </ul>
-    </p>
-
-    <p>使用 .NET 进行客户端 Web 开发可提供以下优势：</p>
+    <p>Blazor 是一个使用 .NET 生成交互式客户端 Web UI 的框架，使用 Blazor 进行客户端 Web 开发可提供以下优势：</p>
     <ul>
         <li>使用 C# 代替 JavaScript 来编写代码。</li>
         <li>利用现有的 .NET 生态系统。</li>
         <li>在服务器和客户端之间共享应用逻辑。</li>
         <li>受益于 .NET 的性能、可靠性和安全性。</li>
-        <li>始终高效支持 Windows、Linux 和 macOS 上的 Visual Studio。</li>
-        <li>支持 Net6 及以上版本。</li>
-        <li> 以一组稳定、功能丰富且易用的通用语言、框架和工具为基础来进行生成。</li>
     </ul>
-    <p>本项目是基于 Mdui 样式进行二次开发和封装的 UI 组件库。</p>
+    <p>本项目是基于 mdui 样式进行二次开发和封装的 Blazor UI 组件库，当前已支持 Net8。</p>
 </div>
 
 <MduiDivider Class="mdui-m-y-5" />
