--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
                  <MduiText Typo="@Typo.title">MduiBlazor</MduiText>
              </MduiButton>
              <MduiButton DisableRaised Href="https://www.mdui.org/" target="_blank">
-                 <MduiText Typo="@Typo.title">Mdui</MduiText>
+                 <MduiText Typo="@Typo.title">MDUI</MduiText>
              </MduiButton>
              <MduiToolbarSpace />
              <MduiTooltip Position="@Position.Bottom" Message="设置主题">
