--- a/mdui/src/components/toolbar/index.less
+++ b/mdui/src/components/toolbar/index.less
@@ -9,6 +9,8 @@
   align-items: center;
   box-sizing: border-box;
   width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
   &>* {
     margin: 0 16px;
     .mdui-text-truncate();
