--- a/mdui/src/components/toolbar/index.less
+++ b/mdui/src/components/toolbar/index.less
@@ -9,8 +9,7 @@
   align-items: center;
   box-sizing: border-box;
   width: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
   &>* {
     margin: 0 16px;
     .mdui-text-truncate();
