--- a/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout3.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout3.razor
@@ -1,7 +1,7 @@
 <div class="mdui-shadow-5" style="height: 360px;">
     <MduiLayout AppbarWithToolbar AppbarWithTab>
         <MduiAppbar Inset>
-            <MduiToolbar Color="@Colors.Theme.Primary">
+            <MduiToolbar style="overflow-x: hidden;" Color="@Colors.Theme.Primary">
                 <MduiIconButton OnClick="@ToggleDrawer" Icon="menu" />
                 <MduiText Typo="@Typo.title">Title</MduiText>
                 <MduiToolbarSpace />
