--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
             <MduiButton DisableRaised Href="">
                  <MduiText Typo="@Typo.title">MduiBlazor</MduiText>
              </MduiButton>
-             <MduiButton DisableRaised Href="https://www.mdui.org/" target="_blank">
+             <MduiButton Class="mdui-hidden-xs" DisableRaised Href="https://www.mdui.org/" target="_blank">
                  <MduiText Typo="@Typo.title">MDUI</MduiText>
              </MduiButton>
              <MduiToolbarSpace />
