--- a/MduiBlazor/Components/Tab/MduiTab.razor
+++ b/MduiBlazor/Components/Tab/MduiTab.razor
@@ -1,8 +1,8 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<MduiSwipeArea OnSwipe="@OnSwipe" Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes">
     <CascadingValue Name="Tab" Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
-</div>
+</MduiSwipeArea>
