Add SwipeArea Accuracy parameter BottomeNav support swipe Fix Tab disabled item when swipe

--- a/MduiBlazor/Components/BottomNav/MduiBottomNav.razor
+++ b/MduiBlazor/Components/BottomNav/MduiBottomNav.razor
@@ -1,8 +1,8 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<MduiSwipeArea OnSwipe="@OnSwipe" Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes">
     <CascadingValue Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
-</div>
+</MduiSwipeArea>
