--- a/MduiBlazor/Components/BottomNav/MduiBottomNavItem.razor
+++ b/MduiBlazor/Components/BottomNav/MduiBottomNavItem.razor
@@ -2,7 +2,7 @@
 @inherits MduiComponentBase
 
 <a class="@Classname" style="@Style" @attributes="@AdditionalAttributes"
-    @onclick="@(_=>Nav?.OnActiveItemChanged(this))">
+    @onclick="@(_=>Nav?.OnActivedItemChanged(this))">
     @if (ChildContent is not null)
     {
         @ChildContent
